# checkers_ncurses

./: CMakeLists.txt  README.md  run.sh
src/: AI.cpp  AI.hpp  display_UI.cpp  display_UI.hpp  game_board.cpp  game_board.hpp  label.cpp  label.hpp  main.cpp  pieces.cpp  pieces.hpp
